# Caton

./: LICENSE  README.md  pyproject.toml  server.py
caton/: __init__.py
static/css/: login_screen.css  number_tokens.css  style.css  tiles.css
static/js/: create_game.js  login_screen.js  utils.js
templates/: index.html
tests/: test_caton.py
